--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,3 +1,18 @@
-.App {
-  text-align: center;
+.app {
+	margin: 0;
+	padding: 0;
+	text-align: center;
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  margin: 2rem 20%;
+  text-align: right;
+  label {
+  	margin-right: 0.5em;
+  }
+}
+
+.number_input {
 }
