--- a/src/App.module.css
+++ b/src/App.module.css
@@ -2,12 +2,17 @@
 	margin: 0;
 	padding: 0;
 	text-align: center;
+	width: 100%;
+	height: 100%;
+	h1 {
+		margin: 0;
+	}
 }
 
 .grid {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  margin: 2rem 20%;
+  margin: 0 20%;
   text-align: right;
   label {
   	margin-right: 0.5em;
