add margin-top to h1

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -6,6 +6,7 @@
 	height: 100%;
 	h1 {
 		margin: 0;
+		margin-top: 10px;
 	}
 	display: flex;
 	flex-flow: column;
@@ -29,5 +30,11 @@
 	flex: 1 1 auto;
 	canvas {
 		max-height: 100%;
+	}
+}
+
+@media only screen and (max-width: 600px) {
+	.grid {
+		margin: 0;
 	}
 }
