--- a/src/App.module.css
+++ b/src/App.module.css
@@ -28,9 +28,7 @@
 
 .chart_container {
 	flex: 1 1 auto;
-	canvas {
-		max-height: 100%;
-	}
+	height: 30vw;
 }
 
 @media only screen and (max-width: 600px) {
